--- a/src/App.css
+++ b/src/App.css
@@ -42,8 +42,8 @@ body {
 .card {
   display: inline-block;
   width: 28%;
-  min-height: 80vh;
-  margin: 1%;
+  height: 80vh;
+  
 }
 
 .notify-badge {
